  05 Sep 2019;  <bemeurer@gentoo.org> essentia-2.1_beta5.ebuild:
  dev-libs/luv: remove package

  01 Sep 2019;  <bemeurer@gentoo.org> +files/essentia-2.1_beta5-libdir.patch,
  +files/essentia-2.1_beta5-test-lib-path.patch,
  -files/essentia-2.1_beta5-wscript.patch, essentia-2.1_beta5.ebuild:
  dev-libs/essentia: fix libdir issues

  01 Sep 2019;  <bemeurer@gentoo.org> essentia-2.1_beta5.ebuild:
  dev-libs/essentia: BATTLE ON

  01 Sep 2019;  <bemeurer@gentoo.org> essentia-2.1_beta5.ebuild:
  dev-libs/essentia: The battle continues

  31 Aug 2019;  <bemeurer@gentoo.org> +files/essentia-2.1_beta5-wscript.patch,
  essentia-2.1_beta5.ebuild:
  dev-libs/essentia: many small fixes

  30 Aug 2019;  <bemeurer@gentoo.org> essentia-2.1_beta5.ebuild:
  dev-libs/essentia: DUMPSTER FIRE

*essentia-2.1_beta5 (30 Aug 2019)

  30 Aug 2019;  <bemeurer@gentoo.org> +essentia-2.1_beta5.ebuild, +metadata.xml:
  dev-libs/essentia: DUMPSTER FIRE