@@ -2,6 +2,6 @@ AUX essentia-2.1_beta5-libdir.patch 1116 BLAKE2B 293e4db9ccec8f1c3727c1c69423891
 AUX essentia-2.1_beta5-test-lib-path.patch 341 BLAKE2B 0337a7b2329c0dc80f0cc9772b725b517775d5c44b0b19efcffcefcb078ce6ab25ad6fd9ccf4f8b91cb292545bc75285bc3396d27226da98ad67b5dd072cdb7c SHA512 11564d0bee4e5a5d11d13facad707d4cb936cd5987710166ef797d91e886df2bb65b985c0f467405314af326b69691f76648360c46f5bd3c4379c31c56326111
 DIST essentia-2.1_beta5.tar.gz 68079452 BLAKE2B f208be0b91930777a531fb00f5aa9291c386369bba4930d749a128b350964b71b300bd5e814505234e9bb152c1db7db3aed18a06d4ff322235f8169c66376baa SHA512 7fce02739d8a4e40035f8d14071df38a25b4b7633e1e05fa8003947e9d4514e41b0095ef8eed7428902dc7046de3ce2f98438e791786c6c99057717695ee8820
 DIST essentia-audio-2.1_beta5.zip 68920030 BLAKE2B 0e8d9c1b2077090fa41af89393105e8d1ed70f9fb6e254d5275d331486e786ecbfffe694b91f6894012f9c67a0d72909f4270478abd33b353bd99b34f905973b SHA512 d24074ada3adb5d39f5b577eb3fd86cbd3ca7ca8e465ec5754206f4df2aaf2908dfffb851981dedfdb65699afa7cda2a57b19f9a024b213fecb80e8df6335450
-EBUILD essentia-2.1_beta5.ebuild 4279 BLAKE2B 81d2a5257c79fa612968c5699684a5a99479c49e608ef5ebe72dc495480b5f7ebcda77f95f78e6be496927b955727d40cb4c452b0cfafccb56c2061e73b870d0 SHA512 db8b08db0d8ae0b056c168a3c46afc2278adcdb7552ad2673afdc965809f0b0c6e65b14ae9cdf9c58804ded8caa7b7b11be6e0caefa3f71eeba6f558701814db
-MISC ChangeLog 938 BLAKE2B 870dc3d927219f04788ffac20a8c45a6c9c28206ca616d262911112e4f6110eba20392cb81dc476d53f4c7747356c685a9bc52ca9a80d28cf0d02b9e31c38603 SHA512 9aaefccdfd2026ce5e589e2d4b77b5c9e36c684f5f154a0a1310dee618abd8792d2da89363eda2056f0106ebe5200ef6a74d506b70e373a87d414e17fbab85ee
+EBUILD essentia-2.1_beta5.ebuild 4472 BLAKE2B 795812dfe703c4999abbe099ed2c6446cda6ed9566c4eba4b7ec639025ea630b93d741a800bdecddcc1b67d502798a4827a676d6c2749669bfa2e2cd7b01521d SHA512 ad325a02898fe609c2e7b607cd51797fb8f8fd78baf6b2572e97a842a19708b5cf43ee0cbac9cb8b00cbf8abbc188ee8cc15cc93496682aae19e2287e64424d0
+MISC ChangeLog 1039 BLAKE2B eab5c45f3cb62b48030b5987fc4cfb92d1ad786886a03f00d45bf691bc34be638cde1db37d3017490a89ad931f1c0404423cace10684212a406df1df4629b748 SHA512 98e5bce149b1083f7c0cc27713b04b5614d21cd4ad07cf141f9804cbb12afc4486078335577a32c7013328767a7627ca88a5c055296f49174672e52b926a1841
 MISC metadata.xml 1925 BLAKE2B f782f7c0635c5572e34586ab7cf99588d1412884378f99e977c7c3108e39834a37063ad2a54b0f2b76f360a1d3d061e0af328755ab9b0bfc7e3e58dd97579bb5 SHA512 7fdece8f34a618b666737dbd3e4b3d44180a9d678482473cbe6293afa5223f5874703bd1e372055968285eda3b4b790752c86e4f402296e4045934a8231a16f1
